--- a/cgv.html
+++ b/cgv.html
@@ -60,7 +60,7 @@
       <h3>2.6 – Passation et confirmation de la commande</h3>
       <p>Le Client sélectionne le ou les articles de son choix proposé à la vente du le Site. Pour chaque article, un descriptif détaillé et le prix de vente sont précisés.</p>
       <p>Pour effectuer sa commande, le Client se connecte à son compte Client grâce à ses identifiants.<br>Au moment de la validation de la commande, le Client s'assure que toutes les informations (coordonnées, articles sélectionnés, adresse de livraison etc.) sont exactes puis effectue le paiement en communiquant ses coordonnées bancaires. Une confirmation définitive sera alors requise pour finaliser la commande.</p>
-      <p>Dès confirmation du paiement de la commande par le centre de paiement, un courrier électronique confirmant l'enregistrement de l'opération est adressé au Client. Cet email constitue la preuve de la commande pour le Client, et contiendra la facture d'achat du ou des article(s).</p>
+      <p>Dès confirmation du paiement de la commande par le centre de paiement, un courrier électronique confirmant l'enregistrement de l'opération est adressé au Client. Cet email constitue la preuve de la commande pour le Client.</p>
       <p>En cas de non réception du courrier électronique dans un délai d'un jour, vous pouvez vous adresser à la librairie de la Cinémathèque française au 01&nbsp;71&nbsp;19&nbsp;34&nbsp;05 ou adresser un courrier électronique à librairie@cinematheque.fr.</p>
       <h2>Article 3 – Données personnelles</h2>
       <h3>3.1 – Enregistrement des données personnelles et droit d'accès</h3>
