Smaller headings for narrow displays

--- a/cgv.html
+++ b/cgv.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Offrez la Cinémathèque !">
+    <meta name="description" content="Faites profiter vos proches des activités de la Cinémathèque française, offrez des cadeaux cinéma sélectionnés par la librairie.">
     <meta property="og:locale" content="fr_FR">
-    <meta property="og:site_name" content="Offrez la Cinémathèque !">
-    <meta property="og:title" content="Offrez la Cinémathèque !">
+    <meta property="og:site_name" content="Pour les Fêtes... offrez la Cinémathèque !">
+    <meta property="og:title" content="Pour les Fêtes... offrez la Cinémathèque !">
     <meta property="og:url" content="http://www.offrezlacinematheque.fr">
-    <meta property="og:description" content="Offrez la Cinémathèque !">
+    <meta property="og:description" content="Faites profiter vos proches des activités de la Cinémathèque française, offrez des cadeaux cinéma sélectionnés par la librairie.">
     <meta property="og:image" content="http://www.offrezlacinematheque.fr/title470x246.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="470">
     <meta property="og:image:height" content="246">
-    <title>Conditions générales de ventes - Offrez la Cinémathèque ! - La Cinémathèque française</title>
+    <title>Pour les Fêtes... offrez la Cinémathèque !</title>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quicksand:700|Source+Sans+Pro:300, 300italic,400,400italic,600,600italic,700,700italic">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation-essential/6.2.2/css/foundation.min.css">
+    <link rel="stylesheet" href="src/css/main.css">
     <style>
     body {
       margin-top: 48px;
+      background-color: #fff; color: #111;
       font-family: Source Sans Pro; font-size: 0.938rem;
-      color: #111;
     }
     h1, h2, h3 {
+      padding: 0;
+      color: #111; 
       font-family: Source Sans Pro; font-weight: 600;
-      text-transform: uppercase;
+      text-transform: uppercase; text-shadow: none;
     }
     h1 { font-size: 1.5rem; }
     h2 { font-size: 1.25rem; }
