--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <body>
     <div class="row trans">
       <h1><span class="small">Pour les fêtes...</span><br>Offrez la Cinémathèque</h1>
+      <p class="chapeau">3 offres pour découvrir les plus belles expositions de cinéma&nbsp;: De Méliès à la 3D&nbsp;: la Machine cinéma, jusqu'au 29 janvier, Mômes &amp; Cie, du 29 mars au 30 juillet, le 5ème festival Toute la mémoire du monde en présence de Joe Dante et Wes Anderson, des rétrospectives exceptionnelles&nbsp;: Frank Capra, Jane Birkin (en sa présence), Jean Eustache... Et des idées cadeaux pour tous les passionnés de cinéma, à retrouver en ligne ou à la librairie.</p>
     </div>
     <div class="abonnements row small-up-1 medium-up-2 large-up-3">
       <div class="column">
