--- a/cgv.html
+++ b/cgv.html
@@ -9,9 +9,9 @@
     <meta property="og:locale" content="fr_FR">
     <meta property="og:site_name" content="Pour les Fêtes... offrez la Cinémathèque !">
     <meta property="og:title" content="Pour les Fêtes... offrez la Cinémathèque !">
-    <meta property="og:url" content="http://www.offrezlacinematheque.fr">
+    <meta property="og:url" content="http://www.librairiecinematheque.fr">
     <meta property="og:description" content="Faites profiter vos proches des activités de la Cinémathèque française, offrez des cadeaux cinéma sélectionnés par la librairie.">
-    <meta property="og:image" content="http://www.offrezlacinematheque.fr/title470x246.jpg">
+    <meta property="og:image" content="http://www.librairiecinematheque.fr/title470x246.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="470">
     <meta property="og:image:height" content="246">
@@ -43,8 +43,8 @@
     <div class="row">
       <p><a href="index.html">Revenir aux offres</a></p>
       <h1>Conditions générales de vente Offre librairie</h1>
-      <p>Les présentes CGV régissent l'utilisation, par toute personne, de la page http://www.offrezlacinematheque.fr/ (ci-après dénommée «&nbsp;le Site&nbsp;»).</p>
-      <p>Le fait de passer commande via le Site www.offrezlacinematheque.fr vaut acceptation entière et irrévocable des présentes conditions générales de vente.</p>
+      <p>Les présentes CGV régissent l'utilisation, par toute personne, de la page http://www.librairiecinematheque.fr/ (ci-après dénommée «&nbsp;le Site&nbsp;»).</p>
+      <p>Le fait de passer commande via le Site www.librairiecinematheque.fr vaut acceptation entière et irrévocable des présentes conditions générales de vente.</p>
       <h2>Article 1 – Dispositions générales</h2>
       <p>Les présentes conditions générales de vente s'appliquent entre la Cinémathèque française, association régie par la Loi du 1er juillet 1901 dont le siège social est situé au 51, rue de Bercy 75012 Paris N° SIRET: 775 671 464 00110 et toute personne effectuant un achat (ci-après dénommée «&nbsp;le Client&nbsp;»).</p>
       <p>L'achat d'articles culturels est réservé aux seules personnes majeures disposant de la capacité juridique de contracter.</p>
@@ -89,7 +89,7 @@
       <p>Le(s) article(s) réservé(s) est/sont à retirer en caisse sur présentation du bon de retrait envoyé par mail et d'une pièce d'identité valide. Le Client dispose de 30(trente) jours ouvrés pour venir retirer l(es)' article(s), délai à partir duquel l(es)' article(s) est/sont remis en rayon, la Cinémathèque française ne pouvant plus garantir sa/leur disponibilité. Le Client est alors immédiatement remboursé du montant de sa commande.</p>
       <h2>Article 6 – Droit de rétractation</h2>
       <p>Conformément à la législation en vigueur, vous bénéficiez d'un droit de rétractation à exercer dans un délai de quatorze jours ouvrés à compter de la réception de votre commande.<br>Pour exercer votre droit de rétractation, conformément aux dispositions légales, vous trouverez ci-après en Annexe 1 un formulaire-type de rétractation à nous adresser à l'adresse suivante&nbsp;: Librairie de la Cinémathèque française, 51 Rue de Bercy, 75012 Paris. Vous pouvez exercer votre droit de rétractation également par courrier électronique à l'adresse librairie@cinematheque.com, ou par tout moyen exprimant votre volonté de vous rétracter sans aucune ambiguïté, et mentionnant la commande concernée par cette rétractation.<br>Une fois le formulaire ou la déclaration de rétractation envoyée au plus tard dans les 14 jours suivant la réception de votre commande, vous devez renvoyer le ou les articles concernés à la librairie de la Cinémathèque française à l'adresse mentionnée ci-dessus, et ce au plus tard, dans les 14 jours à compter de l'envoi du formulaire ou la déclaration de rétractation à la Cinémathèque française.</p>
-      <p>Les articles devront être renvoyés dans leur état d'origine et complets, le Client demeurant responsable de toute détérioration due à l'utilisation du ou des article(s) avant renvoi, autre que les manipulations liées à l'exercice raisonnable du droit de rétractation. Il est précisé que les CD, DVD ou Blu Ray descellés ne bénéficient pas du droit de rétractation.</p>
+      <p>Les articles devront être renvoyés dans leur état d'origine et complets, le Client demeurant responsable de toute détérioration due à l'utilisation du ou des article(s) avant renvoi, autre que les manipulations liées à l'exercice raisonnable du droit de rétractation. Il est précisé que les CD, vinyles, DVD ou Blu-ray descellés ne bénéficient pas du droit de rétractation.</p>
       <p>En cas d'exercice du droit de rétractation, seul le prix du ou des articles achetés et les frais d'envoi seront remboursés, les frais de retour restant à la charge du Client.</p>
       <p>La Cinémathèque française procédera au remboursement des sommes versées par virement bancaire, et ce, à réception du ou des articles objets de la rétractation ou au plus tard dans les 14 jours à compter de la date à laquelle la Cinémathèque française est informée de votre décision de vous rétracter.</p>
       <h2>Article 7 – Garantie légale de conformité et vices cachés</h2>
